syntax = "proto3";

option java_package = "smartGlasses";
option java_multiple_files = true;
option java_outer_classname = "smartGlassesImpl";

package smartGlasses;


service smartGlassesService {

 	rpc turnOnGlasses(sgBooleanRequest) returns (sgBooleanResponse) {}
 	rpc setDestination (sgIntRequest) returns (sgBooleanResponse){}
 	rpc startJourney (sgBooleanRequest ) returns (stream sgStringResponse) {}
 	rpc distanceLeft (stream sgIntRequest) returns (stream sgIntResponse){}
 	}

message sgBooleanRequest {
  	bool boolVal = 1;  
}

message sgBooleanResponse {
    bool boolRespVal = 1;
}

message sgStringRequest {
    string stringVal = 1;
}

message sgIntRequest {
    int32 intVal = 1;
}

message sgIntResponse {
    int32 intVal = 1;
}

message sgStringResponse {
    string stringRespVal = 1;
}






