syntax = "proto3";

option java_package = "smartWatch";
option java_multiple_files = true;
option java_outer_classname = "smartWatchImpl";

package smartWatch;


service smartWatchService {

 	rpc turnOnSwitch(BooleanRequest) returns (BooleanResponse) {}
 	rpc setTimer(IntRequest) returns (StringResponse) {}
 	rpc startTimer(BooleanRequest) returns (BooleanResponse) {}
   	rpc pauseTimer(BooleanRequest) returns (BooleanResponse) {}
    rpc resetTimer(BooleanRequest) returns (BooleanResponse) {}
 
}

message BooleanRequest {
  	bool boolValue = 1;  
}

message BooleanResponse {
    bool boolRespVal = 1;
}

message StringRequest {
    string stringVal = 1;
}

message StringResponse {
    string stringRespVal = 1;
}

message IntRequest{
    int32 intValue = 1;
}